# alphaa

./: .gitignore  Dockerfile  README.md  REQUIREMENTS.md  job.nomad.hcl  pyproject.toml
alphaa/: __init__.py  __main__.py
alphaa/broker/: __init__.py  paper.py
alphaa/cli/: main.py
alphaa/conditions/: __init__.py  position.py  price.py
alphaa/core/: __init__.py  conditions.py  protocols.py  strategy.py  types.py
alphaa/data/: __init__.py  cache.py  yahoo.py
alphaa/engine/: __init__.py  backtest.py  cost_models.py
alphaa/indicators/: __init__.py  price.py
alphaa/reporting/: __init__.py  charts.py  cli_output.py  csv_export.py  metrics.py
alphaa/service/: __init__.py  backtest_service.py
alphaa/strategies/: __init__.py  builtin.py  loader.py
alphaa/web/: __init__.py  app.py  db.py  routes.py
alphaa/web/templates/: base.html  index.html  leaderboard.html  result.html  strategies.html
docs/: design.md
docs/adr/: 0001-composition-over-inheritance.md  0002-immutable-value-types.md  0003-conditions-as-composable-callables.md  README.md
tests/: conftest.py
tests/broker/: test_paper.py
tests/conditions/: test_position.py  test_price.py
tests/core/: test_conditions.py  test_strategy.py  test_types.py
tests/data/: test_cache.py  test_yahoo.py
tests/data/fixtures/: RELIANCE_NS_2019_2024.csv
tests/engine/: test_backtest.py  test_cost_models.py
tests/indicators/: test_price.py
tests/reporting/: test_charts.py  test_csv_export.py  test_metrics.py
tests/service/: test_backtest_service.py
tests/strategies/: test_builtin.py  test_loader.py
tests/system/: test_end_to_end.py
tests/web/: test_app.py  test_db.py
