[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphaa"
version = "0.1.0"
description = "Algo trading platform for Indian equities with backtesting"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "yfinance>=0.2",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that hit external APIs (deselect with '-m \"not slow\"')",
]
