[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphaa"
version = "0.1.0"
description = "Algo trading platform for Indian equities with backtesting"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "yfinance>=0.2",
    "matplotlib>=3.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "RestrictedPython>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["RestrictedPython", "RestrictedPython.*"]
ignore_missing_imports = true

[project.scripts]
alphaa-web = "alphaa.web.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that hit external APIs (deselect with '-m \"not slow\"')",
]
